fixed spacing after buttons, removed some unnecessary css from categories css that I had used for testing

--- a/client/src/components/EditableText/EditableText.css
+++ b/client/src/components/EditableText/EditableText.css
@@ -150,12 +150,3 @@ height: min 440px;
     margin-left: 20px; 
 }
 
-
-#H4_1 {
-background-color: none;
-}
-
-.formDiv{
-    padding: 0px;
-    margin: 0px;
-}
